fix spacing

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -89,6 +89,7 @@ h3,
 h4,
 h5,
 h6 {
+  margin-top: 2rem;
   margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
